--- a/views/index.html
+++ b/views/index.html
@@ -7,16 +7,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
   <header>
     <h2><a href="#">Queers in Tech</a></h2>
     <nav>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Events</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#events">Events</a></li>
+      <li><a href="https://medium.com/@queersintech" target="_blank">Blog</a></li>
+      <li><a href="#contact">Contact</a></li>
     </nav>
   </header>
 
@@ -25,11 +25,11 @@
     <div class="hero-content-area">
       <h1>Queers in Tech</h1>
       <h3>An inclusive community of queers and allies in technology</h3>
-      <a href="#" class="btn">Contact Us</a>
+      <a href="#contact" class="btn">Contact Us</a>
     </div>
   </section>
 
-  <section class="about">
+  <section id="about">
     <h3 class="title">About</h3>
     <p>Diversity and inclusion in tech is a topic we hear often. But how do we increase visibility and actually start to show up more as marginalized groups? This organization seeks to answer that question.</p>
     <hr>
@@ -41,7 +41,7 @@
     </ul>
   </section>
 
-  <section class="events">
+  <section id="events">
     <h3 class="title">Workshops and Meetups</h3>
     <p>We get together twice a month to learn new technologies, grow our community, and enjoy talks from industry leaders (that are also queers) in tech.</p>
     <hr>
@@ -70,7 +70,7 @@
     </ul>
   </section>
 
-  <section class="contributors">
+  <section id="contributors">
     <h3 class="title">Queers in Tech Contributors:</h3>
     <hr>
     <p class="quote">In order for us to start occupying more space in the tech community, we have to start being seen, heard, and felt in the industry. Build more cool shit, jump on worthwhile projects, and start changing the world.</p>
@@ -79,22 +79,19 @@
     <p class="author">- Spencer Dezart-Smith</p>
   </section>
 
-  <section class="contact">
+  <section id="contact">
     <h3 class="title">Learn More</h3>
     <p>Want to know about our upcoming events, or come to one of our mixers? Just sign up for our mailing list. No spam from us, we promise!</p>
     <hr>
-    <form>
-      <input type="email" placeholder="Email">
-      <a href="#" class="btn">Subscribe</a>
-    </form>
+    <a href="https://www.meetup.com/members/241074599/" class="btn">Join our Meetup</a>
   </section>
 
   <footer>
     <p>Images courtest of <a href="http://unsplash.com/">unsplash</a>.</p>
     <p>&copy; Queers in Tech 2017</p>
     <ul>
-      <li><a href="#"><i class="fa fa-medium fa-2x"></i></a></li>
-      <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+      <li><a href="https://medium.com/@queersintech"><i class="fa fa-medium fa-2x"></i></a></li>
+      <li><a href="https://www.meetup.com/members/241074599/"><i class="fa fa-meetup fa-2x"></i></a></li>
     </ul>
   </footer>
 </body>
