switches back to app

--- a/views/index.html
+++ b/views/index.html
@@ -7,11 +7,11 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
-    <h2><a href="#">Queers in Tech!</a></h2>
+    <h2><a href="#">Queers in Tech</a></h2>
     <nav>
       <li><a href="#about">About</a></li>
       <li><a href="#events">Events</a></li>
@@ -21,7 +21,7 @@
   </header>
 
   <section class="hero">
-    <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
+    <div class="background-image" style="background-image: url(img/main.jpg);"></div>
     <div class="hero-content-area">
       <h1>Queers in Tech</h1>
       <h3>An inclusive community of queers and allies in technology</h3>
@@ -34,10 +34,10 @@
     <p>Diversity and inclusion in tech is a topic we hear often. But how do we increase visibility and actually start to show up more as marginalized groups? This organization seeks to answer that question.</p>
     <hr>
     <ul class="grid">
-      <li class="small" style="background-image: url(assets/img/queer1.jpg)"></li>
-      <li class="large" style="background-image: url(assets/img/queer2.jpg)"></li>
-      <li class="large" style="background-image: url(assets/img/queer3.jpg)"></li>
-      <li class="small" style="background-image: url(assets/img/queer4.jpg)"></li>
+      <li class="small" style="background-image: url(img/queer1.jpg)"></li>
+      <li class="large" style="background-image: url(img/queer2.jpg)"></li>
+      <li class="large" style="background-image: url(img/queer3.jpg)"></li>
+      <li class="small" style="background-image: url(img/queer4.jpg)"></li>
     </ul>
   </section>
 
