fixes medium links

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <nav>
       <li><a href="#about">About</a></li>
       <li><a href="#events">Events</a></li>
-      <li><a href="https://medium.com/@queersintech" target="_blank">Blog</a></li>
+      <li><a href="https://medium.com/queers-in-tech" target="_blank">Blog</a></li>
       <li><a href="#contact">Contact</a></li>
     </nav>
   </header>
@@ -90,7 +90,7 @@
     <p>Images courtest of <a href="http://unsplash.com/">unsplash</a>.</p>
     <p>&copy; Queers in Tech 2017</p>
     <ul>
-      <li><a href="https://medium.com/@queersintech"><i class="fa fa-medium fa-2x"></i></a></li>
+      <li><a href="https://medium.com/queers-in-tech"><i class="fa fa-medium fa-2x"></i></a></li>
       <li><a href="https://www.meetup.com/members/241074599/"><i class="fa fa-meetup fa-2x"></i></a></li>
     </ul>
   </footer>
