fixes meetup button

--- a/views/index.html
+++ b/views/index.html
@@ -81,9 +81,9 @@
 
   <section id="contact">
     <h3 class="title">Learn More</h3>
-    <p>Want to know about our upcoming events, or come to one of our mixers? Just sign up for our mailing list. No spam from us, we promise!</p>
+    <p>Information about our meetup and events coming soon!!!</p>
     <hr>
-    <a href="https://www.meetup.com/members/241074599/" class="btn">Join our Meetup</a>
+    
   </section>
 
   <footer>
